--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,4 +1,6 @@
 {
     "welcome": "ようこそ",
-    "logout": "ログアウト"
+    "logout": "ログアウト",
+    "metaTitle": "開発者ポートフォリオ",
+    "metaDesc": "チャールズ・ボン・チュア：フルスタック開発者"
 }
