--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -2,5 +2,9 @@
     "welcome": "ようこそ",
     "logout": "ログアウト",
     "metaTitle": "開発者ポートフォリオ",
-    "metaDesc": "チャールズ・ボン・チュア：フルスタック開発者"
+    "metaDesc": "チャールズ・ボン・チュア：フルスタック開発者",
+    "home": "ホーム",
+    "about": "概要",
+    "contactUs": "お問い合わせ",
+    "explore": "エクスプロア"
 }
