Added: Temp Pages

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
+    "name": "Charles Bon Chua",
+    "profession": "Full Stack Developer",
     "welcome": "Welcome",
     "logout": "Logout",
     "metaTitle": "Developer Portfolio",
