--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,4 +1,6 @@
 {
+    "name": "チャールズ・ボン・チュア",
+    "profession": "フルスタック開発者",
     "welcome": "ようこそ",
     "logout": "ログアウト",
     "metaTitle": "開発者ポートフォリオ",
