Updated: Home Page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,7 @@
     "zuittTitle": "Zuitt Learning Institute",
     "zuittDesc": "I started my coding journey in Zuitt 3 years ago. I learned different modern tools and frameworks for web development. I had the opportunity to work as a full stack developer.",
     "projectsTitle": "PROJECTS",
+    "projectsInfo": "With respect to our high profile clients' agreements, we will not show corporate projects",
     "bookingAppTitle": "Booking App",
     "bookingAppDesc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas non massa sapien. Suspendisse sollicitudin urna sit amet dictum tempus. Donec commodo nisi quam, et finibus.",
     "reportAppTitle": "EReport App",
