--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -19,6 +19,7 @@
     "zuittTitle": "ズイット・ラーニング・インスティテュート",
     "zuittDesc": "さんねん　まえ　に　ズイット　で　わたし　は　コーヂング　を　べんきょうしました。たくさん　ウェブ　フレームワーク　を　ならいました。しごと　で、わたし　は　フルスタック開発者　です。",
     "projectsTitle": "プロジェクト",
+    "projectsInfo": "クライアントとの契約があるので、プロジェクトを見せません。",
     "bookingAppTitle": "ブッキングアプリ",
     "bookingAppDesc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas non massa sapien. Suspendisse sollicitudin urna sit amet dictum tempus. Donec commodo nisi quam, et finibus.",
     "reportAppTitle": "Eレポートアプリ",
