Updated: About Page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,7 +29,25 @@
     "workExperience": "Work Experience",
     "prospernaTitle": "Prosperna Philippines, Inc.",
     "prospernaDesc": "Developed and maintained enterprise-level web and mobile applications as a Full Stack Developer, working on both frontend (React.js, Flutter, Wix) and backend (Node.js, Express, MySQL) components.",
-    "prospernaDesc2": "Prosperna Ecommerce Admin Mobile App: Implemented dashboard and order features revamp, JNT waybill and Geolocation.",
-    "prospernaDesc3": "Guam-based public utility company app: Implemented new security features, site enhancements, bug fixes.",
-    "prospernaDesc4": "Philippine-based riding app: Implemented news, announcements and booking features, minor enhancements."
+    "prospernaDesc2": "(Prosperna Ecommerce Admin Mobile App): Implemented dashboard and order features revamp, JNT waybill and Geolocation.",
+    "prospernaDesc3": "(Guam-based public utility company app): Implemented new security features, site enhancements, bug fixes.",
+    "prospernaDesc4": "(Philippine-based riding app): Implemented news, announcements and booking features, minor enhancements.",
+    "xtendlyTitle": "Xtendly Philippines, Inc.",
+    "xtendlyDesc": "Professional experience in web and mobile development working with ecommerce, admin apps, marketing sites, and affiliate web apps (React.js, Flutter, minor tasks using PHP)",
+    "xtendlyDesc2": "(Philippine-based pawnshop website) - Implemented core features of web app (like payment, products, etc.)",
+    "xtendlyDesc3": "Performed setup and configurations in Firebase, App Store",
+    "trainingTitle": "Trainings and Seminar",
+    "zuittJlptTitle": "Zuitt Japanese Language Program",
+    "zuittJlptDesc": "The N5 level program focuses on building a strong foundation in the Japanese language, tailored for beginners.",
+    "zuittJlptDesc2": "Basic Vocabulary & Expressions",
+    "zuittJlptDesc3": "Essential Grammar",
+    "zuittJlptDesc4": "Hiragana, Katakana & Introductory Kanji",
+    "zuittBootcampTitle": "Zuitt Coding Bootcamp",
+    "zuittBootcampDesc": "An intensive training program designed to equip aspiring developers with practical, job-ready skills. Throughout the bootcamp, I gained hands-on experience in front-end and back-end web development, working with modern technologies and frameworks.",
+    "appleTitle": "Apple Webinars",
+    "appleDesc": "Webinars for App Store Connect TestFlight, XCode Setup and Build",
+    "educationSection": "Education",
+    "educationTitle": "Technological Institute of the Philippines",
+    "educationDesc": "BS Civil Engineering",
+    "educationDesc2": "2013 - 2019"
 }
