--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,5 +49,9 @@
     "educationSection": "Education",
     "educationTitle": "Technological Institute of the Philippines",
     "educationDesc": "BS Civil Engineering",
-    "educationDesc2": "2013 - 2019"
+    "educationDesc2": "2013 - 2019",
+    "nameForm": "Name",
+    "emailForm": "Email",
+    "messageForm": "Message",
+    "sendForm": "Send"
 }
