Updated: Meta Data

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -3,8 +3,8 @@
     "profession": "フルスタック開発者",
     "welcome": "ようこそ",
     "logout": "ログアウト",
-    "metaTitle": "開発者ポートフォリオ",
-    "metaDesc": "チャールズ・ボン・チュア：フルスタック開発者",
+    "metaTitle": "開発者ポートフォリオ | Developer's Portfolio - Charles Bon Chua",
+    "metaDesc": "チャールズ・ボン・チュア：フルスタック開発者 | Developer's Portfolio - Charles Bon Chua",
     "tagline": "コード。クリエイト。シンプル。",
     "home": "ホーム",
     "about": "がいよう",
