Updated: JA Translations

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -13,7 +13,7 @@
     "featured": "じっせき",
     "viewMore": "さらに ひょうじ",
     "jlptTitle": "日本語能力試験",
-    "jlptDescription": "こんにちは　わたし　は　にほんご　の　N5　ﾚﾍﾞﾚ　ごうかくしゃ です。わたし　は　たくさん　きかい　が　ほしい　です　から　きょねん　にほんご　を　べんきょうました。いつか　あなた　と　いっしょに　しごと　が　したいです。よろしく　おねがいします。",
+    "jlptDescription": "こんにちは　わたし　は　にほんご　の　N5　レベル　ごうかくしゃ です。わたし　は　たくさん　きかい　が　ほしい　です　から　きょねん　にほんご　を　べんきょうました。いつか　あなた　と　いっしょに　しごと　が　したいです。よろしく　おねがいします。",
     "inputPlaceholder": "なにをかんがえていますか？",
     "growthSection": "せんもんてきなせいちょう",
     "zuittTitle": "ズイット・ラーニング・インスティテュート",
@@ -24,7 +24,7 @@
     "bookingAppDesc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas non massa sapien. Suspendisse sollicitudin urna sit amet dictum tempus. Donec commodo nisi quam, et finibus.",
     "reportAppTitle": "Eレポートアプリ",
     "reportAppDesc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas non massa sapien. Suspendisse sollicitudin urna sit amet dictum tempus. Donec commodo nisi quam, et finibus.",
-    "aboutDescription": "こんにちは　わたし　は　チャールズ　じょうねつてき　な　プログラム　です。わたし　は　さんねんかん　フルスタック　かいはつしゃ　と　して　はたらいて　います。この　ぎょうかい　で、わたし　は　じつようてき　で　つかいやすい　あぷり　を　つくります。",
+    "aboutDescription": "こんにちは　わたし　は　チャールズ　じょうねつてき　な　プログラム　です。わたし　は　さんねんかん　フルスタック　かいはつしゃ　と　して　はたらいて　います。この　ぎょうかい　で、わたし　は　じつようてき　で　つかいやすい　アプリ　を　つくります。",
     "otherDetails": "Other Details",
     "workExperience": "じつむ　けいけん",
     "prospernaTitle": "Prosperna Philippines, Inc.",
@@ -57,6 +57,6 @@
     "contactTitle": "メッセージ　を　おくる",
     "contactEmail": "Eメール　を　おくる >>",
     "makePhoneCall": "でんわ　を　かける",
-    "letsConnect": "つながるましょう",
+    "letsConnect": "つながりましょう",
     "contactTagline": "つながり を たいせつに しています"
 }
